src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Allowed_to_Volunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this contact is allowed to volunteer and has completed all necessary paperwork, training, tasks, etc.</description>
        <inlineHelpText>If checked, this contact is allowed to volunteer and has completed all necessary paperwork, training, tasks, etc.</inlineHelpText>
        <label>Allowed to Volunteer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckAlerts__c</fullName>
        <label>Background Check Alerts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckConsentTimestamp__c</fullName>
        <label>Background Check Consent Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckPaymentId__c</fullName>
        <label>Background Check Payment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckPaymentTimestamp__c</fullName>
        <label>Background Check Payment Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckReportId__c</fullName>
        <label>Background Check Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckReportURL__c</fullName>
        <label>Background Check Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckStatusDetails__c</fullName>
        <label>Background Check Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckStatus__c</fullName>
        <label>Background Check Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Homeless__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the volunteer applicant currently homeless?</description>
        <inlineHelpText>Is the volunteer applicant currently homeless?</inlineHelpText>
        <label>Currently Homeless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_First_Name__c</fullName>
        <label>Emergency Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Last_Name__c</fullName>
        <label>Emergency Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethics_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ethics Agreement: Non-therapeutic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FBI_NGI_Rap_Back_Privacy_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FBI NGI Rap Back Privacy Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitator_Schedule__c</fullName>
        <description>Times and days that facilitator works at Encircle.</description>
        <inlineHelpText>Times and days that facilitator works at Encircle.</inlineHelpText>
        <label>Facilitator Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this person ever work at Encircle in the role of Facilitator?</description>
        <inlineHelpText>Does this person ever work at Encircle in the role of Facilitator?</inlineHelpText>
        <label>Facilitator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fingerprints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fingerprints</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friendship_Circle__c</fullName>
        <label>Friendship Circle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Friendship_Circle_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospitalization_Explanation__c</fullName>
        <description>Explanation for why the volunteer applicant was hospitalized in the last 6 months.</description>
        <inlineHelpText>Explanation for why the volunteer applicant was hospitalized in the last 6 months.</inlineHelpText>
        <label>Hospitalization Explanation</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hospitalized_in_the_Last_6_Months__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the volunteer applicant been hospitalized within the last 6 months for a suicide attempt or other mental health problem?</description>
        <inlineHelpText>Has the volunteer applicant been hospitalized within the last 6 months for a suicide attempt or other mental health problem?</inlineHelpText>
        <label>Hospitalized in the Last 6 Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Volunteer_Training__c</fullName>
        <label>Last Volunteer Training</label>
        <summarizedField>Volunteer_Training_Attendance__c.StartDateTime__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Training_Attendance__c.Completed_Training__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Training_Attendance__c.Volunteer__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_First_Name__c</fullName>
        <label>Legal First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_of_Upcoming_Trainings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This potential volunteer has requested to be notified of upcoming trainings.</description>
        <inlineHelpText>This potential volunteer has requested to be notified of upcoming trainings.</inlineHelpText>
        <label>Notify of Upcoming Trainings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Length_for_School_Comm_Service__c</fullName>
        <description>How long does the volunteer applicant plan on volunteering for school credit or community service?</description>
        <inlineHelpText>How long does the volunteer applicant plan on volunteering for school credit or community service?</inlineHelpText>
        <label>Planned Length for School/Comm. Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pronouns__c</fullName>
        <label>Pronouns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>He/him/his</fullName>
                </value>
                <value>
                    <fullName>She/her/hers</fullName>
                </value>
                <value>
                    <fullName>They/them/theirs</fullName>
                </value>
                <value>
                    <fullName>Ze/hir/hirs</fullName>
                </value>
                <value>
                    <fullName>Xe/xem/xyrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screening_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screening Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this contact a current member of Encircle&apos;s staff?</description>
        <inlineHelpText>Is this contact a current member of Encircle&apos;s staff?</inlineHelpText>
        <label>Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatementOfConfidentialityTimestamp__c</fullName>
        <description>Date and time when the volunteer agreed to the Statement of Confidentiality and other contracts.</description>
        <inlineHelpText>Date and time when the volunteer agreed to the Statement of Confidentiality and other contracts.</inlineHelpText>
        <label>Statement of Confidentiality Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Statement_of_Confidentiality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statement of Confidentiality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suicide_Prevention_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suicide Prevention Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer Acknowledgement of Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteering_Reason__c</fullName>
        <label>Volunteering Reason</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteering_for_School_Comm_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the volunteer applicant volunteering to receive community service hours or school credit/hours?</description>
        <inlineHelpText>Is the volunteer applicant volunteering to receive community service hours or school credit/hours?</inlineHelpText>
        <label>Volunteering for School/Comm. Service</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>